Update lists at 20250710-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -118,7 +118,6 @@ allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.172.205.8;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -221,6 +220,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.149.151.48;
 allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -257,6 +257,7 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -445,6 +446,8 @@ allow 185.241.208.92;
 allow 185.244.192.175;
 allow 185.244.192.184;
 allow 185.246.128.161;
+allow 185.246.188.115;
+allow 185.246.188.116;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
@@ -724,7 +727,6 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -898,6 +900,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -956,6 +959,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
@@ -1201,6 +1205,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:e0a:c20:25a0::df38:d0e;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1258,7 +1263,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1287,6 +1291,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1753,7 +1758,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1837,6 +1841,7 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.140;
 allow 82.29.128.145;
+allow 82.65.3.49;
 allow 82.68.49.227;
 allow 83.147.17.190;
 allow 83.217.208.30;
