--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 100.42.28.67;
 allow 100.42.28.68;
 allow 100.42.28.69;
 allow 100.42.28.70;
-allow 101.99.92.179;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -14,6 +13,7 @@ allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
+allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
 allow 103.208.86.5;
@@ -34,6 +34,7 @@ allow 104.244.73.43;
 allow 104.244.74.229;
 allow 104.244.74.23;
 allow 104.244.74.97;
+allow 104.244.75.140;
 allow 104.244.75.74;
 allow 104.244.76.237;
 allow 104.244.77.208;
@@ -115,6 +116,7 @@ allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.172.205.8;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -142,10 +144,8 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.11.164.4;
 allow 142.44.133.81;
 allow 144.126.133.74;
-allow 144.172.84.103;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
@@ -478,7 +478,6 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
-allow 185.7.78.70;
 allow 185.82.219.109;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -581,6 +580,7 @@ allow 194.26.192.77;
 allow 194.31.174.167;
 allow 194.53.137.156;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -729,6 +729,7 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -867,7 +868,6 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.232.235.104;
-allow 216.227.168.204;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -936,7 +936,6 @@ allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
 allow 23.236.122.193;
-allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
@@ -966,7 +965,6 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
-allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
@@ -1003,6 +1001,7 @@ allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f04d:2605:6400:30:30;
+allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1209,7 +1208,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4780:2d:9877::1;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1272,7 +1270,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1519,7 +1516,9 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
+allow 2a12:6fc2:8000::1b1;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1596,7 +1595,6 @@ allow 31.133.0.210;
 allow 31.184.236.104;
 allow 31.220.75.237;
 allow 31.44.238.25;
-allow 31.97.99.5;
 allow 35.0.127.52;
 allow 37.114.50.124;
 allow 37.114.50.142;
@@ -1667,8 +1665,10 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.142.203.182;
 allow 45.145.93.133;
 allow 45.148.10.111;
+allow 45.153.34.221;
 allow 45.153.34.246;
 allow 45.154.98.33;
 allow 45.38.20.81;
@@ -1844,17 +1844,16 @@ allow 82.29.128.140;
 allow 82.29.128.145;
 allow 82.68.49.227;
 allow 83.147.17.190;
-allow 83.217.208.30;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.239.55.132;
+allow 85.90.196.162;
 allow 85.93.218.204;
 allow 86.54.25.3;
 allow 86.54.28.49;
