--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 100.42.28.67;
 set_real_ip_from 100.42.28.68;
 set_real_ip_from 100.42.28.69;
 set_real_ip_from 100.42.28.70;
-set_real_ip_from 101.99.92.179;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -14,6 +13,7 @@ set_real_ip_from 102.211.56.200;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.146.203.11;
 set_real_ip_from 103.164.54.199;
+set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.208.86.5;
@@ -34,6 +34,7 @@ set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.229;
 set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
+set_real_ip_from 104.244.75.140;
 set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.76.237;
 set_real_ip_from 104.244.77.208;
@@ -115,6 +116,7 @@ set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
@@ -142,10 +144,8 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
-set_real_ip_from 141.11.164.4;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 144.126.133.74;
-set_real_ip_from 144.172.84.103;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
@@ -478,7 +478,6 @@ set_real_ip_from 185.42.170.203;
 set_real_ip_from 185.56.171.94;
 set_real_ip_from 185.56.83.83;
 set_real_ip_from 185.67.82.114;
-set_real_ip_from 185.7.78.70;
 set_real_ip_from 185.82.219.109;
 set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.239.191.25;
@@ -581,6 +580,7 @@ set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.31.174.167;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.87.55.98;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
@@ -729,6 +729,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:545c::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -867,7 +868,6 @@ set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.232.235.104;
-set_real_ip_from 216.227.168.204;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
@@ -936,7 +936,6 @@ set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
 set_real_ip_from 23.236.122.193;
-set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
 set_real_ip_from 2400:8907::f03c:95ff:fe79:8c79;
@@ -966,7 +965,6 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
-set_real_ip_from 2602:fa59:4:246::1;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1003,6 +1001,7 @@ set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
 set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
+set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1209,7 +1208,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:4780:2d:9877::1;
 set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
@@ -1272,7 +1270,6 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1519,7 +1516,9 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a11:6100:0:1467::;
+set_real_ip_from 2a12:6fc2:8000::1b1;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:223;
 set_real_ip_from 2a12:a800:11:1:124:198:131:253;
@@ -1596,7 +1595,6 @@ set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
-set_real_ip_from 31.97.99.5;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
 set_real_ip_from 37.114.50.142;
@@ -1667,8 +1665,10 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
+set_real_ip_from 45.142.203.182;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
+set_real_ip_from 45.153.34.221;
 set_real_ip_from 45.153.34.246;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.81;
@@ -1844,17 +1844,16 @@ set_real_ip_from 82.29.128.140;
 set_real_ip_from 82.29.128.145;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.147.17.190;
-set_real_ip_from 83.217.208.30;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
-set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.239.55.132;
+set_real_ip_from 85.90.196.162;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.54.25.3;
 set_real_ip_from 86.54.28.49;
