Update lists at 20250711-0001

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1270,6 +1270,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1436,6 +1437,7 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
@@ -1847,6 +1849,7 @@ set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
@@ -1935,4 +1938,3 @@ set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
 set_real_ip_from 96.9.125.211;
-set_real_ip_from 98.128.173.33;
