--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1270,6 +1270,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1436,6 +1437,7 @@ allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
+allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
@@ -1847,6 +1849,7 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
@@ -1935,4 +1938,3 @@ allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
 allow 96.9.125.211;
-allow 98.128.173.33;
