--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -433,6 +433,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -599,6 +600,7 @@ deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
+deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
