Update lists at 20250711-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,5 +1,4 @@
 deny 2001:1af8:4700:a114:6::1;
-deny 2001:1b40:5700:983c::1;
 deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
@@ -102,6 +101,7 @@ deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:545c::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -452,6 +452,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -609,6 +610,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0d:8140:1fff:2a21::1;
 deny 2a0d:8140:1fff:2c04::1;
+deny 2a0d:8140:1fff:c510::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::132;
 deny 2a0d:bbc7:0:1::1df;
@@ -651,7 +653,6 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
