--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -32,6 +32,7 @@ allow 104.244.73.43;
 allow 104.244.74.229;
 allow 104.244.74.23;
 allow 104.244.74.97;
+allow 104.244.75.140;
 allow 104.244.75.74;
 allow 104.244.76.237;
 allow 104.244.77.208;
@@ -107,6 +108,9 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 109.71.252.182;
+allow 109.71.252.88;
+allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
 allow 118.193.64.139;
@@ -129,7 +133,6 @@ allow 128.14.224.10;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
-allow 130.193.15.79;
 allow 131.72.79.38;
 allow 135.125.239.70;
 allow 136.244.111.163;
@@ -440,9 +443,9 @@ allow 185.246.188.117;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
-allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
+allow 185.247.184.33;
 allow 185.247.226.175;
 allow 185.247.226.95;
 allow 185.252.232.218;
@@ -566,7 +569,6 @@ allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -985,6 +987,7 @@ allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f04d:2605:6400:30:30;
+allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1190,7 +1193,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1252,6 +1254,7 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9dc0:31::c0cc:4d;
+allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
@@ -1268,7 +1271,6 @@ allow 2a06:1700:0:50::11;
 allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
-allow 2a06:1700:4:14::1;
 allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
@@ -1423,6 +1425,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0d:8140:1fff:2a21::1;
 allow 2a0d:8140:1fff:2c04::1;
@@ -1456,6 +1459,8 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
+allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
+allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
@@ -1486,7 +1491,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a12:6fc2:8000::1b1;
 allow 2a12:a800:11:1:124:198:131:108;
@@ -1564,6 +1568,11 @@ allow 31.184.236.104;
 allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
+allow 37.114.50.124;
+allow 37.114.50.142;
+allow 37.114.50.18;
+allow 37.114.50.27;
+allow 37.114.63.5;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.221.208.71;
@@ -1589,6 +1598,8 @@ allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
+allow 45.13.225.69;
+allow 45.13.225.78;
 allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.138.16.107;
@@ -1717,6 +1728,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 5.253.247.27;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.103.235;
@@ -1801,7 +1813,6 @@ allow 82.221.131.5;
 allow 82.221.139.190;
 allow 82.29.128.140;
 allow 82.29.128.145;
-allow 82.68.49.227;
 allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
@@ -1811,6 +1822,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
+allow 85.239.41.130;
 allow 85.239.55.132;
 allow 85.90.196.162;
 allow 85.93.218.204;
