--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -101,7 +101,6 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:545c::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -455,6 +454,7 @@ set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:6d80:1e01:3a13::;
+set_real_ip_from 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
@@ -646,6 +646,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -741,6 +742,7 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:140;
 set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
+set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a12:de40:21:1be4::;
