Update lists at 20250714-0301

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1256,6 +1256,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1669,7 +1670,6 @@ deny 45.148.10.111;
 deny 45.153.34.221;
 deny 45.153.34.246;
 deny 45.154.98.33;
-deny 45.38.20.81;
 deny 45.61.137.205;
 deny 45.61.185.172;
 deny 45.61.186.203;
@@ -1760,6 +1760,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
