--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1256,6 +1256,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1669,7 +1670,6 @@ allow 45.148.10.111;
 allow 45.153.34.221;
 allow 45.153.34.246;
 allow 45.154.98.33;
-allow 45.38.20.81;
 allow 45.61.137.205;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1760,6 +1760,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
