--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -223,7 +223,6 @@ deny 176.65.148.133;
 deny 176.65.148.3;
 deny 176.65.149.100;
 deny 176.65.149.84;
-deny 176.65.149.87;
 deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
@@ -585,6 +584,7 @@ deny 194.163.157.49;
 deny 194.26.192.77;
 deny 194.53.137.156;
 deny 194.87.55.98;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.47.238.176;
@@ -603,7 +603,6 @@ deny 195.47.238.91;
 deny 195.47.238.92;
 deny 195.47.238.93;
 deny 195.80.151.242;
-deny 195.88.74.206;
 deny 198.167.206.202;
 deny 198.251.84.163;
 deny 198.251.84.237;
@@ -938,6 +937,7 @@ deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
 deny 23.236.122.193;
+deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8905::f03c:95ff:fe67:ec03;
 deny 2400:8907::f03c:95ff:fe79:8c79;
@@ -1273,7 +1273,6 @@ deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
-deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
@@ -1488,7 +1487,6 @@ deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3ea:882::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -1516,6 +1514,7 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a11:6100:0:1467::;
 deny 2a12:6fc2:8000::1b1;
 deny 2a12:a800:11:1:124:198:131:108;
@@ -1903,7 +1902,6 @@ deny 93.113.25.239;
 deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.165.211;
-deny 93.90.74.28;
 deny 93.90.74.29;
 deny 93.95.227.37;
 deny 93.95.228.125;
