--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -344,6 +344,26 @@ deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:16b0:242:1e::1;
+deny 2a00:16b0:242:1e::10;
+deny 2a00:16b0:242:1e::11;
+deny 2a00:16b0:242:1e::12;
+deny 2a00:16b0:242:1e::13;
+deny 2a00:16b0:242:1e::14;
+deny 2a00:16b0:242:1e::2;
+deny 2a00:16b0:242:1e::3;
+deny 2a00:16b0:242:1e::4;
+deny 2a00:16b0:242:1e::5;
+deny 2a00:16b0:242:1e::6;
+deny 2a00:16b0:242:1e::7;
+deny 2a00:16b0:242:1e::8;
+deny 2a00:16b0:242:1e::9;
+deny 2a00:16b0:242:1e::a;
+deny 2a00:16b0:242:1e::b;
+deny 2a00:16b0:242:1e::c;
+deny 2a00:16b0:242:1e::d;
+deny 2a00:16b0:242:1e::e;
+deny 2a00:16b0:242:1e::f;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
@@ -418,7 +438,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -429,7 +448,6 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -448,6 +466,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -604,6 +623,7 @@ deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
+deny 2a0c:e300:b:b::b;
 deny 2a0d:8140:1fff:2a21::1;
 deny 2a0d:8140:1fff:2c04::1;
 deny 2a0d:8140:1fff:c510::1;
@@ -745,6 +765,7 @@ deny 2a12:a800:9:1:193:26:115:140;
 deny 2a12:a800:9:1:193:26:115:212;
 deny 2a12:a800:9:1:193:26:115:43;
 deny 2a12:a800:9:1:193:26:115:61;
+deny 2a12:a800:9:1:193:26:115:82;
 deny 2a12:a800:9:1:45:83:31:79;
 deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
