--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -264,6 +264,7 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -299,6 +300,7 @@ allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
+allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.193.52.180;
 allow 185.195.71.244;
@@ -433,6 +435,7 @@ allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.230.162.134;
 allow 185.231.102.51;
+allow 185.233.100.23;
 allow 185.235.146.29;
 allow 185.241.208.115;
 allow 185.241.208.185;
@@ -571,6 +574,7 @@ allow 193.26.115.212;
 allow 193.26.115.243;
 allow 193.26.115.43;
 allow 193.26.115.61;
+allow 193.26.115.82;
 allow 193.32.162.104;
 allow 193.32.162.96;
 allow 193.36.132.21;
@@ -1183,6 +1187,26 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:16b0:242:1e::1;
+allow 2a00:16b0:242:1e::10;
+allow 2a00:16b0:242:1e::11;
+allow 2a00:16b0:242:1e::12;
+allow 2a00:16b0:242:1e::13;
+allow 2a00:16b0:242:1e::14;
+allow 2a00:16b0:242:1e::2;
+allow 2a00:16b0:242:1e::3;
+allow 2a00:16b0:242:1e::4;
+allow 2a00:16b0:242:1e::5;
+allow 2a00:16b0:242:1e::6;
+allow 2a00:16b0:242:1e::7;
+allow 2a00:16b0:242:1e::8;
+allow 2a00:16b0:242:1e::9;
+allow 2a00:16b0:242:1e::a;
+allow 2a00:16b0:242:1e::b;
+allow 2a00:16b0:242:1e::c;
+allow 2a00:16b0:242:1e::d;
+allow 2a00:16b0:242:1e::e;
+allow 2a00:16b0:242:1e::f;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -1257,7 +1281,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1268,7 +1291,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1287,6 +1309,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1443,6 +1466,7 @@ allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
+allow 2a0c:e300:b:b::b;
 allow 2a0d:8140:1fff:2a21::1;
 allow 2a0d:8140:1fff:2c04::1;
 allow 2a0d:8140:1fff:c510::1;
@@ -1584,6 +1608,7 @@ allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
+allow 2a12:a800:9:1:193:26:115:82;
 allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
@@ -1666,7 +1691,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.142.203.182;
 allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
@@ -1763,7 +1787,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1850,7 +1873,6 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
@@ -1868,6 +1890,26 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.151.194.24;
+allow 88.80.17.66;
+allow 88.80.17.67;
+allow 88.80.17.68;
+allow 88.80.17.69;
+allow 88.80.17.70;
+allow 88.80.17.71;
+allow 88.80.17.72;
+allow 88.80.17.73;
+allow 88.80.17.74;
+allow 88.80.17.75;
+allow 88.80.17.76;
+allow 88.80.17.77;
+allow 88.80.17.78;
+allow 88.80.17.79;
+allow 88.80.17.80;
+allow 88.80.17.81;
+allow 88.80.17.82;
+allow 88.80.17.83;
+allow 88.80.17.84;
+allow 88.80.17.85;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
