Update lists at 20250715-0601

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -178,7 +178,6 @@ allow 154.53.58.161;
 allow 158.174.210.51;
 allow 160.119.249.240;
 allow 161.129.68.162;
-allow 161.97.156.152;
 allow 162.210.173.17;
 allow 162.210.173.3;
 allow 162.210.173.5;
@@ -1520,6 +1519,7 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1956,6 +1956,7 @@ allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
