Update lists at 20250715-2101

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -27,10 +27,10 @@ allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
 allow 2001:67c:289c:2::235;
-allow 2001:67c:289c::2:35;
-allow 2001:67c:289c::2:36;
-allow 2001:67c:289c::2:37;
-allow 2001:67c:289c::2:38;
+allow 2001:67c:289c:2::35;
+allow 2001:67c:289c:2::36;
+allow 2001:67c:289c:2::37;
+allow 2001:67c:289c:2::38;
 allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::131;
 allow 2001:67c:289c:4::77;
@@ -349,26 +349,6 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:16b0:242:1e::1;
-allow 2a00:16b0:242:1e::10;
-allow 2a00:16b0:242:1e::11;
-allow 2a00:16b0:242:1e::12;
-allow 2a00:16b0:242:1e::13;
-allow 2a00:16b0:242:1e::14;
-allow 2a00:16b0:242:1e::2;
-allow 2a00:16b0:242:1e::3;
-allow 2a00:16b0:242:1e::4;
-allow 2a00:16b0:242:1e::5;
-allow 2a00:16b0:242:1e::6;
-allow 2a00:16b0:242:1e::7;
-allow 2a00:16b0:242:1e::8;
-allow 2a00:16b0:242:1e::9;
-allow 2a00:16b0:242:1e::a;
-allow 2a00:16b0:242:1e::b;
-allow 2a00:16b0:242:1e::c;
-allow 2a00:16b0:242:1e::d;
-allow 2a00:16b0:242:1e::e;
-allow 2a00:16b0:242:1e::f;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -472,6 +452,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -673,7 +654,6 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
