--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -231,6 +231,7 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.141.180;
 set_real_ip_from 177.153.51.238;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.162.175.5;
@@ -268,6 +269,7 @@ set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -664,10 +666,10 @@ set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
 set_real_ip_from 2001:67c:289c:2::235;
-set_real_ip_from 2001:67c:289c::2:35;
-set_real_ip_from 2001:67c:289c::2:36;
-set_real_ip_from 2001:67c:289c::2:37;
-set_real_ip_from 2001:67c:289c::2:38;
+set_real_ip_from 2001:67c:289c:2::35;
+set_real_ip_from 2001:67c:289c:2::36;
+set_real_ip_from 2001:67c:289c:2::37;
+set_real_ip_from 2001:67c:289c:2::38;
 set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:289c:4::131;
 set_real_ip_from 2001:67c:289c:4::77;
@@ -1194,26 +1196,6 @@ set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
-set_real_ip_from 2a00:16b0:242:1e::1;
-set_real_ip_from 2a00:16b0:242:1e::10;
-set_real_ip_from 2a00:16b0:242:1e::11;
-set_real_ip_from 2a00:16b0:242:1e::12;
-set_real_ip_from 2a00:16b0:242:1e::13;
-set_real_ip_from 2a00:16b0:242:1e::14;
-set_real_ip_from 2a00:16b0:242:1e::2;
-set_real_ip_from 2a00:16b0:242:1e::3;
-set_real_ip_from 2a00:16b0:242:1e::4;
-set_real_ip_from 2a00:16b0:242:1e::5;
-set_real_ip_from 2a00:16b0:242:1e::6;
-set_real_ip_from 2a00:16b0:242:1e::7;
-set_real_ip_from 2a00:16b0:242:1e::8;
-set_real_ip_from 2a00:16b0:242:1e::9;
-set_real_ip_from 2a00:16b0:242:1e::a;
-set_real_ip_from 2a00:16b0:242:1e::b;
-set_real_ip_from 2a00:16b0:242:1e::c;
-set_real_ip_from 2a00:16b0:242:1e::d;
-set_real_ip_from 2a00:16b0:242:1e::e;
-set_real_ip_from 2a00:16b0:242:1e::f;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
@@ -1317,6 +1299,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1518,7 +1501,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1767,7 +1749,6 @@ set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.18;
 set_real_ip_from 45.9.168.192;
-set_real_ip_from 45.9.168.48;
 set_real_ip_from 45.9.168.70;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
@@ -1896,26 +1877,6 @@ set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.151.194.24;
-set_real_ip_from 88.80.17.66;
-set_real_ip_from 88.80.17.67;
-set_real_ip_from 88.80.17.68;
-set_real_ip_from 88.80.17.69;
-set_real_ip_from 88.80.17.70;
-set_real_ip_from 88.80.17.71;
-set_real_ip_from 88.80.17.72;
-set_real_ip_from 88.80.17.73;
-set_real_ip_from 88.80.17.74;
-set_real_ip_from 88.80.17.75;
-set_real_ip_from 88.80.17.76;
-set_real_ip_from 88.80.17.77;
-set_real_ip_from 88.80.17.78;
-set_real_ip_from 88.80.17.79;
-set_real_ip_from 88.80.17.80;
-set_real_ip_from 88.80.17.81;
-set_real_ip_from 88.80.17.82;
-set_real_ip_from 88.80.17.83;
-set_real_ip_from 88.80.17.84;
-set_real_ip_from 88.80.17.85;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
@@ -1954,7 +1915,6 @@ set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
-set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
