--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -231,6 +231,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.149.141.180;
 allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.162.175.5;
@@ -268,6 +269,7 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -664,10 +666,10 @@ allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
 allow 2001:67c:289c:2::235;
-allow 2001:67c:289c::2:35;
-allow 2001:67c:289c::2:36;
-allow 2001:67c:289c::2:37;
-allow 2001:67c:289c::2:38;
+allow 2001:67c:289c:2::35;
+allow 2001:67c:289c:2::36;
+allow 2001:67c:289c:2::37;
+allow 2001:67c:289c:2::38;
 allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::131;
 allow 2001:67c:289c:4::77;
@@ -1194,26 +1196,6 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:16b0:242:1e::1;
-allow 2a00:16b0:242:1e::10;
-allow 2a00:16b0:242:1e::11;
-allow 2a00:16b0:242:1e::12;
-allow 2a00:16b0:242:1e::13;
-allow 2a00:16b0:242:1e::14;
-allow 2a00:16b0:242:1e::2;
-allow 2a00:16b0:242:1e::3;
-allow 2a00:16b0:242:1e::4;
-allow 2a00:16b0:242:1e::5;
-allow 2a00:16b0:242:1e::6;
-allow 2a00:16b0:242:1e::7;
-allow 2a00:16b0:242:1e::8;
-allow 2a00:16b0:242:1e::9;
-allow 2a00:16b0:242:1e::a;
-allow 2a00:16b0:242:1e::b;
-allow 2a00:16b0:242:1e::c;
-allow 2a00:16b0:242:1e::d;
-allow 2a00:16b0:242:1e::e;
-allow 2a00:16b0:242:1e::f;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -1317,6 +1299,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1518,7 +1501,6 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1767,7 +1749,6 @@ allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.18;
 allow 45.9.168.192;
-allow 45.9.168.48;
 allow 45.9.168.70;
 allow 45.94.31.68;
 allow 45.95.169.104;
@@ -1896,26 +1877,6 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.151.194.24;
-allow 88.80.17.66;
-allow 88.80.17.67;
-allow 88.80.17.68;
-allow 88.80.17.69;
-allow 88.80.17.70;
-allow 88.80.17.71;
-allow 88.80.17.72;
-allow 88.80.17.73;
-allow 88.80.17.74;
-allow 88.80.17.75;
-allow 88.80.17.76;
-allow 88.80.17.77;
-allow 88.80.17.78;
-allow 88.80.17.79;
-allow 88.80.17.80;
-allow 88.80.17.81;
-allow 88.80.17.82;
-allow 88.80.17.83;
-allow 88.80.17.84;
-allow 88.80.17.85;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
@@ -1954,7 +1915,6 @@ allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
