--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -231,6 +231,7 @@ deny 176.65.149.87;
 deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
+deny 177.149.141.180;
 deny 177.153.51.238;
 deny 177.93.140.66;
 deny 178.162.175.5;
@@ -268,6 +269,7 @@ deny 185.100.87.166;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
+deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -664,10 +666,10 @@ deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
 deny 2001:67c:289c:2::235;
-deny 2001:67c:289c::2:35;
-deny 2001:67c:289c::2:36;
-deny 2001:67c:289c::2:37;
-deny 2001:67c:289c::2:38;
+deny 2001:67c:289c:2::35;
+deny 2001:67c:289c:2::36;
+deny 2001:67c:289c:2::37;
+deny 2001:67c:289c:2::38;
 deny 2001:67c:289c::25;
 deny 2001:67c:289c:4::131;
 deny 2001:67c:289c:4::77;
@@ -1194,26 +1196,6 @@ deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
-deny 2a00:16b0:242:1e::1;
-deny 2a00:16b0:242:1e::10;
-deny 2a00:16b0:242:1e::11;
-deny 2a00:16b0:242:1e::12;
-deny 2a00:16b0:242:1e::13;
-deny 2a00:16b0:242:1e::14;
-deny 2a00:16b0:242:1e::2;
-deny 2a00:16b0:242:1e::3;
-deny 2a00:16b0:242:1e::4;
-deny 2a00:16b0:242:1e::5;
-deny 2a00:16b0:242:1e::6;
-deny 2a00:16b0:242:1e::7;
-deny 2a00:16b0:242:1e::8;
-deny 2a00:16b0:242:1e::9;
-deny 2a00:16b0:242:1e::a;
-deny 2a00:16b0:242:1e::b;
-deny 2a00:16b0:242:1e::c;
-deny 2a00:16b0:242:1e::d;
-deny 2a00:16b0:242:1e::e;
-deny 2a00:16b0:242:1e::f;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
@@ -1317,6 +1299,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1518,7 +1501,6 @@ deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3ea:882::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -1767,7 +1749,6 @@ deny 45.9.148.50;
 deny 45.9.156.101;
 deny 45.9.168.18;
 deny 45.9.168.192;
-deny 45.9.168.48;
 deny 45.9.168.70;
 deny 45.94.31.68;
 deny 45.95.169.104;
@@ -1896,26 +1877,6 @@ deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.254.132;
 deny 88.151.194.24;
-deny 88.80.17.66;
-deny 88.80.17.67;
-deny 88.80.17.68;
-deny 88.80.17.69;
-deny 88.80.17.70;
-deny 88.80.17.71;
-deny 88.80.17.72;
-deny 88.80.17.73;
-deny 88.80.17.74;
-deny 88.80.17.75;
-deny 88.80.17.76;
-deny 88.80.17.77;
-deny 88.80.17.78;
-deny 88.80.17.79;
-deny 88.80.17.80;
-deny 88.80.17.81;
-deny 88.80.17.82;
-deny 88.80.17.83;
-deny 88.80.17.84;
-deny 88.80.17.85;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
@@ -1954,7 +1915,6 @@ deny 93.113.25.239;
 deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.165.211;
-deny 93.90.74.28;
 deny 93.90.74.29;
 deny 93.95.227.37;
 deny 93.95.228.125;
