--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -147,6 +147,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 144.126.133.74;
 allow 144.208.79.169;
+allow 146.19.254.157;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
@@ -282,6 +283,7 @@ allow 185.129.61.8;
 allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
+allow 185.130.47.58;
 allow 185.132.53.6;
 allow 185.14.31.113;
 allow 185.150.28.13;
@@ -551,12 +553,6 @@ allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
 allow 193.189.100.200;
-allow 193.189.100.201;
-allow 193.189.100.202;
-allow 193.189.100.203;
-allow 193.189.100.204;
-allow 193.189.100.205;
-allow 193.189.100.206;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.140;
@@ -1240,7 +1236,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1276,6 +1271,7 @@ allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:6d80:1e01:3a13::;
+allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
@@ -1474,12 +1470,6 @@ allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
-allow 2a0f:df00:0:255::201;
-allow 2a0f:df00:0:255::202;
-allow 2a0f:df00:0:255::203;
-allow 2a0f:df00:0:255::204;
-allow 2a0f:df00:0:255::205;
-allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1724,7 +1714,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1857,6 +1846,7 @@ allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
